labs/aks-falco/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-incoming-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: suspicious-pod
  policyTypes:
  - Ingress
  ingress: []
